--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
         new google.translate.TranslateElement(
           {
             pageLanguage: 'en',
-            includedLanguages: 'en,es,fr,de,it,pt,zh-CN,ja,ko,ar,hi,ru',
+            includedLanguages: 'en,es,fr,de,it,pt,zh-CN,ja,ko,ar,hi,ru,nl,sv,pl,tr,th,vi,id,ms,bn,ur,fa',
             layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
             autoDisplay: false
           },
