--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
         }, 100);
       }
     </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </head>
   <body>
     <div id="google_translate_element" style="position: fixed; top: -9999px;"></div>
