--- a/client/index.html
+++ b/client/index.html
@@ -10,20 +10,16 @@
   <body>
     <div id="google_translate_element"></div>
     <div id="root"></div>
-    
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement({
           pageLanguage: 'en',
-          includedLanguages: 'en,es,fr,de,it,pt,zh-CN,ja,ko,ar,hi,ru,nl,sv,pl,tr,th,vi,id,ms,bn,ur,fa',
-          layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+          includedLanguages: 'en,es,fr,de,it,pt,zh-CN,ja,ko,ar,hi,ru,nl,sv,pl,tr,th,vi,id,ms,bn,ur,fa'
         }, 'google_translate_element');
       }
     </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
     <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
