--- a/client/index.html
+++ b/client/index.html
@@ -12,9 +12,26 @@
       }
     </script>
     <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" async></script>
+    <style>
+      /* Hide Google Translate top bar */
+      .goog-te-banner-frame.skiptranslate { display: none !important; }
+      body { top: 0px !important; }
+      .goog-te-gadget { font-size: 0; }
+      .goog-te-gadget > span { display: none; }
+      .goog-te-gadget .goog-te-combo { 
+        padding: 8px 12px;
+        border: 2px solid #049fd9;
+        border-radius: 6px;
+        background: white;
+        color: #333;
+        font-size: 14px;
+        font-weight: 500;
+        cursor: pointer;
+      }
+      .goog-te-gadget .goog-te-combo:hover { background: #f0f9ff; }
+    </style>
   </head>
   <body>
-    <div id="google_translate_element" style="position:fixed;top:80px;right:20px;z-index:9999;"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
