--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,10 @@
         cursor: pointer;
       }
       .goog-te-gadget .goog-te-combo:hover { background: #f0f9ff; }
+      /* Hide Google Translate icon */
+      .goog-te-gadget img { display: none !important; }
+      a.goog-logo-link { display: none !important; }
+      .goog-te-gadget span { display: none !important; }
     </style>
   </head>
   <body>
